<resources>
    <string name="app_name">My Project</string>
    <string name="login">Login</string>
    <string name="username">Username:</string>
    <string name="password">password</string>
    <string name="login1">Login</string>
    <string name="no_account_yet_create_an_account">No Account Yet ? Create an Account!</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="id_number">ID Number</string>
    <string name="sign_upp">Sign Up</string>
    <string name="you_already_have_an_account">You already have an account</string>
</resources>