<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUp"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginBottom="25dp"
                android:background="@drawable/login"
                android:fontFamily="cursive"
                android:paddingVertical="70dp"
                android:text="@string/sign_up"
                android:textAlignment="center"
                android:textColor="#000"
                android:textSize="30sp" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:text="@string/email"
                android:textColor="#cdaf95"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:layout_marginHorizontal="25dp"
                android:layout_marginBottom="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginHorizontal="25dp"
                android:text="@string/username"
                android:textColor="#cdaf95"
                android:textSize="20sp"
                tools:ignore="InvalidId" />

            <EditText
                android:id="@+id/user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginBottom="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginHorizontal="30dp"
                android:text="@string/password"
                android:textColor="#cdaf95"
                android:textSize="20sp"
                />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginBottom="20dp"
                android:inputType="textPassword" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:text="@string/mobile_number"
                android:textColor="#cdaf95"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginBottom="20dp"
                android:inputType="phone" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:text="@string/id_number"
                android:textColor="#cdaf95"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/numid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:layout_marginHorizontal="25dp"
                android:layout_marginBottom="20dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginBottom="25dp"
                android:background="@drawable/button_login"
                android:text="@string/sign_upp"
                tools:ignore="MissingClass" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="2dp"
                android:background="@drawable/button_login"
                android:onClick="login"
                android:text="@string/you_already_have_an_account"
                android:textColor="@color/black"
                />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
